--- a/app.json
+++ b/app.json
@@ -5,7 +5,7 @@
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
-    "scheme": "rnboilerplate",
+    "scheme": "rnboilerplate", // change with actual app scheme, exp: movies, todos, ecommerce, etc
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "ios": {
