--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@rn-primitives/dialog": "^1.2.0",
     "@rn-primitives/portal": "^1.3.0",
     "@rn-primitives/slot": "^1.2.0",
+    "@rn-primitives/switch": "^1.2.0",
     "@rn-primitives/types": "^1.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
