--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,5 +7,14 @@
       "@/*": ["*"]
     }
   },
-  "include": ["**/*.ts", "**/*.tsx", ".expo/types/**/*.ts", "expo-env.d.ts", "nativewind-env.d.ts"]
+  "include": [
+    "**/*.ts",
+    "**/*.tsx",
+    ".expo/types/**/*.ts",
+    "expo-env.d.ts",
+    "nativewind-env.d.ts",
+    "app/_layout.tsx",
+    "nativewind-env.d.ts",
+    "types/**/*.d.ts"
+  ]
 }
