--- a/.prettierrc
+++ b/.prettierrc
@@ -1,8 +1,9 @@
 {
-  "printWidth": 100,
+  "printWidth": 80,
   "tabWidth": 2,
   "singleQuote": true,
   "bracketSameLine": true,
+  "singleAttributePerLine": false,
   "trailingComma": "es5",
   "plugins": ["prettier-plugin-tailwindcss"],
   "tailwindFunctions": ["cva"]
