--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ EXPO_PUBLIC_TMDB_API_KEY=eyJhbGciOiJIUzI1NiJ9.eyJhdWQiOiJjYjJjMmQ4ODQ5ZmQyZWUyNW
 
 EXPO_PUBLIC_TMDB_API=https://api.themoviedb.org/3/
 EXPO_PUBLIC_TMDB_API_IMAGE=https://image.tmdb.org/t/p/
+EXPO_TMDB_ACC_ID=22381243
