--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-native-community/netinfo": "11.4.1",
     "@react-navigation/native": "^7.0.0",
+    "@rn-primitives/dropdown-menu": "^1.2.0",
     "@rn-primitives/portal": "~1.3.0",
     "@rn-primitives/slot": "^1.2.0",
     "@tanstack/react-query": "^5.90.6",
