--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@rn-primitives/dropdown-menu": "^1.2.0",
     "@rn-primitives/portal": "~1.3.0",
     "@rn-primitives/slot": "^1.2.0",
+    "@rn-primitives/switch": "^1.2.0",
     "@tanstack/react-query": "^5.90.6",
     "axios": "^1.13.1",
     "class-variance-authority": "^0.7.1",
